--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" style="height: 100%" ng-app="main" ng-controller="mainController as mc">
 <head>
+    <meta name="referrer" content="never">
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/css.css">
@@ -11,22 +12,26 @@
 <body style="height: 100%;width: 100%">
     <table style="height: 100%;width: 100%">
         <tr>
-            <td width="60%">
-                <div style="max-width: 670px;margin:auto;color: #3e3e3e" class="rich_media_content" ng-bind-html="mc.getMainHtml()|trust2Html">
-
+            <td width="60%" >
+                <div class="scrollWrapper" style="min-width:690px;margin: auto">
+                <div style="max-width: 670px;margin:auto;color: #3e3e3e" class="rich_media_content" ng-bind-html="mc.getMainHtml()|trust2Html"></div>
                 </div>
             </td>
             
-            <td width="100%" height="100%" style="display: block">
-                <div style="width: 100%">
+            <td width="100%" height="100%">
+                <div class="scrollWrapper">
+                <div style="width: 95%;padding-left: 20px">
                     <p>总模板区</p>
-                    <textarea type="text" ng-model="mc.mainHtml" style="width:100%;height: 20%"></textarea>
+                    <textarea type="text" ng-model="mc.mainHtml" style="width:90%;height: 20%"></textarea>
                     <p>标题</p>
-                    <input type="text" ng-model="mc.artiTitle" style="width:auto;">
+                    <input type="text" ng-model="mc.artiTitle" style="width:auto;">&nbsp;&nbsp;&nbsp;
                     <p>正文</p>
-                    <textarea type="text" ng-model="mc.artiMaintxt" style="width:100%;height: 500px"></textarea>
+                    <textarea type="text" ng-model="mc.artiMaintxt" style="width:90%;height: 500px"></textarea>
+                    <p>版权栏</p>
+                    <textarea type="text" ng-model="mc.artiCredit" style="width:90%;height: 200px"></textarea>
                     <p>素材地址</p>
-                    <textarea type="text" ng-model="mc.artiResSrc" style="width:100%;height: 200px"></textarea>
+                    <textarea type="text" ng-model="mc.artiResSrc" style="width:90%;height: 200px"></textarea>
+                </div>
                 </div>
             </td>
             
