--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta name="referrer" content="never">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>thePi - Article Generator</title>
     <link rel="stylesheet" href="css/css.css">
     <script src="js/angular.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/appIndex.js"></script>
     <script src="js/template.js"></script>
 </head>
 <body style="height: 100%;width: 100%">
@@ -31,6 +31,8 @@
                     <textarea type="text" ng-model="mc.artiCredit" style="width:90%;height: 200px"></textarea>
                     <p>素材地址</p>
                     <textarea type="text" ng-model="mc.artiResSrc" style="width:90%;height: 200px"></textarea>
+                    <p><a href="staticPicGenerator.html">封面名片生成器</a></p>
+
                 </div>
                 </div>
             </td>
