加个链接 加了个清空按钮 图片生成器预览有了背景色

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <div style="width: 95%;padding-left: 20px">
                     <p>总模板区</p>
                     <textarea type="text" ng-model="mc.mainHtml" style="width:90%;height: 20%"></textarea>
+                    <br>
+                    <button ng-click="mc.clear()" style="width: 150px;height: 70px">全部清空</button>
                     <p>标题</p>
                     <input type="text" ng-model="mc.artiTitle" style="width:auto;">&nbsp;&nbsp;&nbsp;
                     <p>正文</p>
