--- a/staticPicGenerator.html
+++ b/staticPicGenerator.html
@@ -17,7 +17,7 @@
 
 
 
-            <div class="scrollWrapper" style="min-width:690px;margin: auto">
+            <div class="scrollWrapper" style="min-width:690px;margin: auto;background-color: #CCC">
                 <img src="img/mpTemplate.png" id="imgMpTemp" style="display: none">
                 <canvas id="cvsMp" width="1000px" height="571px"></canvas>
                 <img src="img/covTemplate.png" id="imgCovTemp" style="display: none">
@@ -56,6 +56,7 @@
                         <img id="imgCovBkg" src="" style="display: none;"/>
                     </div>
                 </div>
+                <p><a href="index.html">文章排版工具</a></p>
             </div>
         </td>
 
